--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
     "nodemon": "^3.1.9",
+    "react-hot-toast": "^2.5.2",
     "socket.io": "^4.8.1"
   }
 }
