--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "nodemon": "^3.1.9",
     "react-hot-toast": "^2.5.2",
     "socket.io": "^4.8.1"
+  },
+  "resolutions": {
+    "rollup": "3.29.4"
   }
 }
