--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "mongoose": "^8.13.2",
     "nodemon": "^3.1.9",
     "react-hot-toast": "^2.5.2",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "@vitejs/plugin-react": "^4.3.4"
   },
   "optionalDependencies": {
     "@rollup/rollup-linux-x64-gnu": "4.9.5"
