--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,14 +17,16 @@
     "react-router-dom": "^7.5.0",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.3",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.3",
+    "@vitejs/plugin-react": "^4.4.0",
+    "daisyui": "^5.0.19"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@iconify/react": "^5.2.1",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react": "^4.3.4",
+    "@vitejs/plugin-react": "^4.4.0",
     "daisyui": "^5.0.19",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
