--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,11 +19,11 @@
     "tailwindcss": "^4.1.3",
     "zustand": "^5.0.3",
     "@vitejs/plugin-react": "^4.4.0",
-    "daisyui": "^5.0.19"
+    "daisyui": "^5.0.19",
+    "@iconify/react": "^5.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
-    "@iconify/react": "^5.2.1",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "eslint": "^9.21.0",
