--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,17 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@iconify/react": "^5.2.1",
     "@tailwindcss/vite": "^4.1.3",
+    "@vitejs/plugin-react": "^4.4.0",
     "chat-app": "file:..",
+    "daisyui": "^5.0.19",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.0",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.3",
-    "zustand": "^5.0.3",
-    "@vitejs/plugin-react": "^4.4.0",
-    "daisyui": "^5.0.19",
-    "@iconify/react": "^5.2.1"
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
