--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "socket.io": "^4.8.1"
   },
   "optionalDependencies": {
-    "@rollup/rollup-linux-x64-gnu": "4.9.5"
+    "@rollup/rollup-linux-x64-gnu": "4.9.5",
+    "lightningcss.linux-x64-gnu": "1.51.0"
   }
 }
