--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "lightningcss": "^1.29.3",
     "mongoose": "^8.13.2",
     "nodemon": "^3.1.9",
     "react-hot-toast": "^2.5.2",
     "socket.io": "^4.8.1"
   },
   "optionalDependencies": {
-    "@rollup/rollup-linux-x64-gnu": "4.9.5",
-    "lightningcss.linux-x64-gnu": "1.51.0"
+    "@rollup/rollup-linux-x64-gnu": "4.9.5"
   }
 }
