--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,9 @@
 {
-    "outputDirectory": "frontend/dist"
+    "outputDirectory": "frontend/dist",
+    "rewrites": [
+        {
+            "source": "/(.*)",
+            "destination": "/frontend/dist/index.html"
+        }
+    ]
 }
